<resources>

    <!--Dashboard-->
    <string name="app_name">SenseVisor</string>
    <string name="welcome_to">Welcome To</string>
    <string name="sense">Sense</string>
    <string name="visor">Visor!</string>
    <string name="dasboard_title">Helping You Navigate\nThrough Your Emotions.</string>
    <string name="get_started">Get Started</string>

    <!--Login and Register-->
    <string name="welcome_back">Welcome Back!</string>
    <string name="to_sensevisor">To SenseVisor</string>
    <string name="hello_there">hello there, login to continue</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or_login">Or Login with</string>
    <string name="google_account">Google Account</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="hello_there_regis">hello there, register to continue</string>
    <string name="register">Register Account</string>
    <string name="register_button">Register</string>
    <string name="or_continue">Or Continue with</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login_now">Login Now</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>

    <!--Home-->
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="tap_to_analyze">TAP TO ANALYZE</string>
    <string name="_09_15_am">09:15 AM</string>
    <string name="mar_19_2025_wednesday">Mar 19, 2025 - Wednesday</string>
    <string name="mz001234">MZ001234</string>
    <string name="welcome_wayan">Welcome, Wayan</string>
    <string name="logout">Logout</string>


    <!-- Question One-->
    <string name="step_1_of_3">Step 1 of 3</string>
    <string name="what_type_of_problem_are_you_facing">What type of problem are you facing?</string>
    <string name="personal_problem">Personal Problem</string>
    <string name="emotional_problem">Emotional Problem</string>
    <string name="social_problem">Social Problem</string>
    <string name="other">Other…</string>

    <!-- Question Two-->
    <string name="step_2_of_3">Step 2 of 3</string>
    <string name="please_describe_the_issues">Please describe the issues you’re currently facing in more detail.</string>
    <string name="lorem_ipsum_dolor">Lorem Ipsum Dolor</string>
    <string name="next">Next\n</string>

    <!-- Analyze Page-->
    <string name="step_3_of_3">Step 3 of 3</string>
    <string name="camera">Camera</string>
    <string name="choose_file">Choose File</string>
    <string name="analyze">Analyze</string>
    <string name="prepare_for_emotion_analysis">prepare for emotion analysis</string>

    <!--Result Prediction-->
    <string name="prediction_result">PREDICTION RESULT</string>
    <string name="i_wayan_ardika_chandra">I Wayan Ardika Chandra</string>
    <string name="doloripsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="get_counselor_recommendation">Get Counselor Recommendation</string>
    <string name="save_result">Save Result</string>

    <!-- History -->
    <string name="delete_all">Delete All</string>
    <string name="_12_00_am">12:00 AM</string>
    <string name="_19_march_2025">19 March, 2025</string>
    <string name="history_prediction">HISTORY PREDICTION</string>

    <!-- History Detail-->
    <string name="angry">Angry</string>

    <!--Forgot Password-->
    <string name="pass">Forgot Password</string>
    <string name="please_enter_your_email">Please Enter Your Email!</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>

    <!--Client ID GOOGLE-->
    <string name="default_web_client_id">380355385213-s55du16bbskrhgpg3ttgo0591n7gc69d.apps.googleusercontent.com</string>


</resources>